# Book-Ecommers

./: .breakpoints  README.md  db.sqlite3  pyproject.toml
Inventory/: admin.py  decorators.py  forms.py  models.py  urls.py  views.py
Inventory/migrations/: 0001_initial.py  0002_auto_20210721_2212.py  0003_alter_book_borrowed.py  0004_auto_20210724_1049.py  0005_auto_20210724_1059.py  0006_book_discounted_price.py  0007_auto_20210728_2033.py  0008_rename_tags_tag.py  0009_alter_book_discounted_price.py  0010_order_orderitem.py  0011_auto_20210805_0910.py  0012_auto_20210805_0911.py  0013_auto_20210805_0916.py  0014_auto_20210805_1955.py  0015_alter_book_discounted_price.py  0016_auto_20210810_0409.py  0017_rename_address_order_shipping_address.py  0018_shippingaddress_default_address.py  0019_auto_20210810_1458.py  0020_book_payment_id.py  0021_book_product_id.py  0022_order_payment_complete.py  0023_auto_20210812_1933.py  0024_rename_trasaction_id_order_transaction_id.py  0025_auto_20210814_1958.py  0026_alter_order_shipping_address.py
Inventory/templates/: Sbase.html  addBook.html  base.html  home.html  invalidCredentials.html  inventoryHome.html  viewBooks.html
LibaryStore/: apps.py
LibraryApp/: forms.py  tests.py  urls.py  views.py
LibraryApp/templates/: base.html
accounts/: forms.py  models.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_user_full_name.py  0003_alter_user_managers.py  0003_auto_20210725_1548.py  0004_auto_20210721_1812.py  (+8 more)
env/: pyvenv.cfg
orders/: forms.py  urls.py  views.py
userAuth/: views.py
(+33 files in other folders)
