[tool.poetry]
name = "repl_python3_Demo-A-Level-NEA"
version = "0.1.0"
description = ""
authors = ["17wilsjam <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
stripe = "^2.60.0"
Django = "^3.2.6"
django-money = "^2.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
